tests/ui/closures/2229_closure_analysis/wild_patterns.stderr
error: First Pass analysis includes:
  --> $DIR/wild_patterns.rs:23:5
   |
LL | /     || {
...  |
LL | |     };
   | |_____^
   |
note: Capturing p[(0, 0)] -> Immutable
  --> $DIR/wild_patterns.rs:27:37
   |
LL |         let Point { x: _x, y: _ } = p;
   |                                     ^

error: Min Capture analysis includes:
  --> $DIR/wild_patterns.rs:23:5
   |
LL | /     || {
...  |
LL | |     };
   | |_____^
   |
note: Min Capture p[(0, 0)] -> Immutable
  --> $DIR/wild_patterns.rs:27:37
   |
LL |         let Point { x: _x, y: _ } = p;
   |                                     ^

error: First Pass analysis includes:
  --> $DIR/wild_patterns.rs:39:5
   |
LL | /     || {
...  |
LL | |     };
   | |_____^
   |
note: Capturing t[(0, 0)] -> ByValue
  --> $DIR/wild_patterns.rs:43:23
   |
LL |         let (_x, _) = t;
   |                       ^

error: Min Capture analysis includes:
  --> $DIR/wild_patterns.rs:39:5
   |
LL | /     || {
...  |
LL | |     };
   | |_____^
   |
note: Min Capture t[(0, 0)] -> ByValue
  --> $DIR/wild_patterns.rs:43:23
   |
LL |         let (_x, _) = t;
   |                       ^

error: First Pass analysis includes:
  --> $DIR/wild_patterns.rs:55:5
   |
LL | /     || {
...  |
LL | |     };
   | |_____^
   |
note: Capturing arr[Index] -> ByValue
  --> $DIR/wild_patterns.rs:59:23
   |
LL |         let [_x, _] = arr;
   |                       ^^^

error: Min Capture analysis includes:
  --> $DIR/wild_patterns.rs:55:5
   |
LL | /     || {
...  |
LL | |     };
   | |_____^
   |
note: Min Capture arr[] -> ByValue
  --> $DIR/wild_patterns.rs:59:23
   |
LL |         let [_x, _] = arr;
   |                       ^^^

error: aborting due to 6 previous errors

